tutorials/labs/examples/11-kserve-hami-dra/02-inference-service.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kserve-test
