tutorials/labs/examples/11-kserve-hami-dra/02-model-storage.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kserve-test
